...
                    android:background="@color/colorToolbar"
                    android:elevation="4dp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

                <FrameLayout
                    android:id="@+id/fragment_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

        <android.support.design.widget.NavigationView
            android:layout_width="wrap_content"
...
